구독내역 정상 조회시 구독으로 처리. 다크모드 설정 무시. 앱 구동시 구독내역 조회. 로그인없이 마이페이지 진입시 로그아웃 버튼을 로그인버튼으로 변경

--- a/AI_MUNJANG/Info.plist
+++ b/AI_MUNJANG/Info.plist
@@ -14,5 +14,7 @@
 		<string>NanumSquareL.ttf</string>
 		<string>NanumSquareR.ttf</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>light</string>
 </dict>
 </plist>
