스토리보드 아이패드용 생성

--- a/AI_MUNJANG/Info.plist
+++ b/AI_MUNJANG/Info.plist
@@ -14,5 +14,7 @@
 		<string>NanumSquareL.ttf</string>
 		<string>NanumSquareR.ttf</string>
 	</array>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>Main_ipad</string>
 </dict>
 </plist>
