testflight를 하기 위한 조건들 추가 및 수정

--- a/AI_MUNJANG/Info.plist
+++ b/AI_MUNJANG/Info.plist
@@ -22,5 +22,7 @@
 	<string>Main_ipad</string>
 	<key>UIMainStoryboardFile~iphone</key>
 	<string>Main</string>
+	<key>UIStatusBarHidden~ipad</key>
+	<false/>
 </dict>
 </plist>
